--- a/index.html
+++ b/index.html
@@ -94,6 +94,34 @@
         </div>
 
         <!-- 업무 모달 -->
+        <div class="modal fade" id="missionModal" tabindex="-1">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">선교 관련 링크</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row g-3">
+                            <div class="col-md-3">
+                                <a href="https://bong892.github.io/mission/" class="btn btn-outline-primary w-100 h-100 py-4">선교회</a>
+                            </div>
+                            <div class="col-md-3">
+                                <a href="https://example2.com" class="btn btn-outline-primary w-100 h-100 py-4">결재</a>
+                            </div>
+                            <div class="col-md-3">
+                                <a href="https://example3.com" class="btn btn-outline-primary w-100 h-100 py-4">일정</a>
+                            </div>
+                            <div class="col-md-3">
+                                <a href="https://example4.com" class="btn btn-outline-primary w-100 h-100 py-4">업무관리</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 나머지 모달들 (교육, 취미, 가족, 선교, 기타) -->
         <div class="modal fade" id="workModal" tabindex="-1">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
@@ -120,8 +148,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- 나머지 모달들 (교육, 취미, 가족, 선교, 기타) -->
         <!-- 각 모달의 구조는 업무 모달과 동일하며, id와 내용만 변경 -->
     </div>
 
